time to make things pretty.

--- a/public/templates/FreeResponseView.html
+++ b/public/templates/FreeResponseView.html
@@ -1,4 +1,4 @@
 <div class="form-group">
-<p><%= questionText %></p>
-<textarea class="form-control" id="text_<%= _id %>" rows="3"></textarea>
+<p><%= question.get("questionText") %></p>
+<textarea class="form-control" id="text_<%= question.get('_id') %>" rows="3"></textarea>
 	</div>
