--- a/public/templates/HeaderView.html
+++ b/public/templates/HeaderView.html
@@ -8,7 +8,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">TPS Survey</a>
+				<a class="navbar-brand" href="#">TPS Report</a>
 			</div>
 
 			<div class="navbar-collapse collapse">
