Pretty graphs, pretty superlatives, started admin page

--- a/public/templates/HeaderView.html
+++ b/public/templates/HeaderView.html
@@ -14,9 +14,10 @@
 			<div class="navbar-collapse collapse">
 
 				<ul class="nav navbar-nav">
-					<li class="sprints-menu"><a href="#sprints">Sprints</a></li>
+					<li class="stats-menu"><a href="#stats">Stats</a></li>
 					<li class="superlatives-menu"><a href="#superlatives">Superlatives</a></li>
 					<li class="survey-menu"><a href="#survey">Survey</a></li>
+					<li class="admin-menu"><a href="#admin">Admin</a></li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
