--- a/public/templates/SuperlativesView.html
+++ b/public/templates/SuperlativesView.html
@@ -1,6 +1,2 @@
-<table class="table table-striped">
-	<tr><th>Superlative</th><th>Winner</th></tr>
-	<% history.each(function(superlative) { %>
-	<tr><td><%= superlative.get("superlative") %></td><td><%= superlative.get("person") %></td></tr>
-	<% }); %>
-</table>
+
+<div id="superlative-tiles"></div>
