--- a/public/templates/ChartView.html
+++ b/public/templates/ChartView.html
@@ -1,2 +1,4 @@
-<h4><%= name %></h4>
-<canvas class="stats-chart" width="800" height="300"></canvas>
+
+	<h4><%= name %></h4>
+	<canvas class="stats-chart" width="800" height="300"></canvas>
+	<div class="legend-container"></div>
