--- a/public/templates/SurveyView.html
+++ b/public/templates/SurveyView.html
@@ -3,4 +3,4 @@
 <% beginDate.setDate(date.getDate()-14); %>
 <h1>Survey for Sprint <%= sprint.get("sprintNumber") %> (<%= beginDate.getMonth() %>/<%= beginDate.getDate() %>/<%= beginDate.getFullYear().toString().substring(2,4) %> - <%= date.getMonth() %>/<%= date.getDate() %>/<%= date.getFullYear().toString().substring(2,4) %>)</h1>
 <form id="survey" role="form"></form>
-<button id="open-superlatives-button" data-toggle="modal" data-target="#voting-modal">Submit the survey!</button>
+<button class="btn btn-primary" id="open-superlatives-button" data-toggle="modal" data-target="#voting-modal">Submit the survey!</button>
