--- a/public/templates/AdminView.html
+++ b/public/templates/AdminView.html
@@ -6,50 +6,16 @@
 
 <!-- Tab panes -->
 <div class="tab-content">
-	<div class="tab-pane active fade in" id="sprints">some sprints</div>
-	<div class="tab-pane fade" id="questions">some questions</div>
+	<div class="tab-pane active fade in" id="sprints"></div>
+	<div class="tab-pane fade" id="questions">
+
+	</div>
 	<div class="tab-pane fade" id="people">
-		<div class="add-button-container">
-		<button class="btn btn-primary" data-toggle="modal" data-target="#add-person-modal">+ Add Person</button>
-		</div>
-		<table class="table" id="person-table">
-			<tr><th>Name</th><th>Picture</th><th></th></tr>
-			<% people.each(function(person) { %>
-			<tr><td><%= person.get("name") %></td><td><img src="<%= person.get('image') %>" alt="<%= person.get('name') %>" width="50" height="50"></td><td><button class="btn btn-danger delete-person-button" id="delete-<%= person.get('_id') %>">Delete</button></td></tr>
-			<% }); %>
-		</table>
+
 	</div>
 </div>
 
-<div class="modal fade" id="add-person-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-				<h4 class="modal-title" id="myModalLabel">Add Person</h4>
-			</div>
-			<div class="modal-body">
-				<form role="form" class="form-horizontal">
-					<div class="form-group">
-						<label for="new-person-name" class="col-sm-3 control-label">Name</label>
-						<div class="col-sm-9">
-							<input class="form-control" id="new-person-name" placeholder="Name">
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="new-person-picture" class="col-sm-3 control-label">Path to picture</label>
-						<div class="col-sm-9">
-							<input class="form-control" id="new-person-picture" placeholder="Path">
-							<span class="help-block">Please choose a square picture.</span>
-						</div>
-					</div>
 
-				</form>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-primary" id="add-person-button">Submit</button>
-			</div>
-		</div>
-	</div>
-</div>
+
+
+
