--- a/public/templates/VoteView.html
+++ b/public/templates/VoteView.html
@@ -7,15 +7,17 @@
 			</div>
 			<div class="modal-body">
 				<form role="form" class="form-horizontal">
-				<% superlatives.each(function(superlative) { %>
+					<% var count = 0 %>
+				<% _.each(superlatives, function(superlative) { %>
 					<div class="form-group">
-						<label for="superlative_<%= superlative.get('_id') %>" class="col-sm-2 control-label"><%= superlative.get("name") %></label>
+						<label for="superlative_<%= count %>" class="col-sm-2 control-label"><%= superlative["name"] %></label>
 						<div class="col-sm-10">
-							<select class="form-control" id="superlative_<%= superlative.get('_id') %>">
+							<select class="form-control" id="superlative_<%= count %>">
 								<% people.each(function(person) { %>
 									<option><%= person.get("name") %></option>
 								<% }); %>
 							</select>
+							<% count++ %>
 						</div>
 					</div>
 				<% }); %>
