--- a/public/templates/MultipleChoiceView.html
+++ b/public/templates/MultipleChoiceView.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="form-group multiple-choice-question survey-question">
 <p><%= question.get("questionText") %></p>
 <% var count=0 %>
 <% _.each(question.get("choices"), function(option) { %>
