--- a/public/templates/SurveyView.html
+++ b/public/templates/SurveyView.html
@@ -1,6 +1,5 @@
-<% var date = new Date(sprint.get("endDate")); %>
-<% var beginDate = new Date(date.getTime()); %>
-<% beginDate.setDate(date.getDate()-14); %>
-<h1>Survey for Sprint <%= sprint.get("sprintNumber") %> (<%= beginDate.getMonth() %>/<%= beginDate.getDate() %>/<%= beginDate.getFullYear().toString().substring(2,4) %> - <%= date.getMonth() %>/<%= date.getDate() %>/<%= date.getFullYear().toString().substring(2,4) %>)</h1>
+<% var beginDate = new Date(sprint.get("startDate")); %>
+<% var endDate = new Date(sprint.get("endDate")); %>
+<h1 id="survey-title">Survey for Sprint <%= sprint.get("sprintNumber") %> (<%= beginDate.getMonth()+1 %>/<%= beginDate.getDate() %>/<%= beginDate.getFullYear().toString().substring(2,4) %> - <%= endDate.getMonth()+1 %>/<%= endDate.getDate() %>/<%= endDate.getFullYear().toString().substring(2,4) %>)</h1>
 <form id="survey" role="form"></form>
-<button class="btn btn-primary" id="open-superlatives-button" data-toggle="modal" data-target="#voting-modal">Submit the survey!</button>
+<button class="btn btn-primary btn-lg" id="open-superlatives-button" data-toggle="modal" data-target="#voting-modal">Submit</button>
