--- a/public/templates/VoteView.html
+++ b/public/templates/VoteView.html
@@ -3,7 +3,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-				<h4 class="modal-title" id="myModalLabel">Vote for superlatives for sprint <%= sprintNumber %></h4>
+				<h4 class="modal-title" id="myModalLabel">Vote for Superlatives for Sprint <%= sprintNumber %></h4>
 			</div>
 			<div class="modal-body">
 				<form role="form" class="form-horizontal">
