--- a/public/templates/HomeView.html
+++ b/public/templates/HomeView.html
@@ -1,7 +1,9 @@
 <div class="jumbotron">
 	<div class="container home-jumbotron">
 		<h1>Yeah... it's time for you to fill out your TPS report.</h1>
-		<div class="col-md-6 col-md-offset-3"><button type="button" class="btn btn-primary btn-lg btn-block" id="take-survey-button">Take the survey</button></div>
+		<div class="col-md-6 col-md-offset-3">
+			<button type="button" class="btn btn-primary btn-lg btn-block" id="take-survey-button">Take the survey</button>
+		</div>
 		<iframe width="420" height="315" src="//www.youtube.com/embed/Fy3rjQGc6lA?rel=0" frameborder="0" allowfullscreen></iframe>
 	</div>
 </div>
