SONIC-2863: first trial for being able to say whether a person has to submit a response

--- a/public/templates/PersonAdminView.html
+++ b/public/templates/PersonAdminView.html
@@ -30,6 +30,11 @@
 							<span class="help-block">Please choose a square picture.</span>
 						</div>
 					</div>
+					<div class="checkbox">
+						<label>
+							<input type="checkbox" id="response-required"> Survey response required
+						</label>
+					</div>
 
 				</form>
 			</div>
