--- a/public/templates/PersonAdminView.html
+++ b/public/templates/PersonAdminView.html
@@ -30,10 +30,12 @@
 							<span class="help-block">Please choose a square picture.</span>
 						</div>
 					</div>
-					<div class="checkbox">
-						<label>
-							<input type="checkbox" id="response-required"> Survey response required
-						</label>
+					<div class="form-group">
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" id="response-required"> Survey response required
+							</label>
+						</div>
 					</div>
 
 				</form>
