--- a/public/templates/PersonAdminView.html
+++ b/public/templates/PersonAdminView.html
@@ -30,12 +30,10 @@
 							<span class="help-block">Please choose a square picture.</span>
 						</div>
 					</div>
-					<div class="form-group">
-						<div class="checkbox">
-							<label>
-								<input type="checkbox" id="response-required"> Survey response required
-							</label>
-						</div>
+					<div class="checkbox">
+						<label class="col-sm-offset-3">
+							<input type="checkbox" id="response-required" checked> Survey response required
+						</label>
 					</div>
 
 				</form>
